[package]
name = "pont-client"
version = "0.1.0"
authors = ["Matt Keeter"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pont-common = { path = "../pont-common" }
serde_json = "*"
wasm-bindgen = "^0.2"
js-sys = "*"
console_error_panic_hook = "*"
lazy_static = "*"

[dependencies.web-sys]
version = "*"
features = [
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'ErrorEvent',
  'EventTarget',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlInputElement',
  'HtmlTableCellElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'SvgElement',
  'SvgCircleElement',
  'Node',
  'NodeList',
  'WebSocket',
  'Window',
]
