[package]
name = "pont-client"
version = "0.1.0"
authors = ["Matt Keeter"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
pont-common = { path = "../pont-common" }
bincode = "*"
wasm-bindgen = "^0.2"
js-sys = "*"
console_error_panic_hook = "*"
lazy_static = "*"

[dependencies.web-sys]
version = "*"
features = [
  'AddEventListenerOptions',
  'Blob',
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'ErrorEvent',
  'EventTarget',
  'FileReader',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlInputElement',
  'HtmlTableCellElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'ProgressEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'SvgElement',
  'SvgGraphicsElement',
  'SvgMatrix',
  'Node',
  'NodeList',
  'Performance',
  'PointerEvent',
  'WebSocket',
  'Window',
]

[build-dependencies]
vergen = "3"
