[package]
name = "pont-client"
version = "0.1.0"
authors = ["Matt Keeter"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
pont-common = { path = "../pont-common" }
bincode = "*"
wasm-bindgen = "^0.2"
js-sys = "*"
console_error_panic_hook = "*"
lazy_static = "*"

[dependencies.web-sys]
version = "*"
features = [
  'AddEventListenerOptions',
  'Blob',
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FileReader',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'Node',
  'NodeList',
  'Performance',
  'PointerEvent',
  'ProgressEvent',
  'SvgElement',
  'SvgGraphicsElement',
  'SvgMatrix',
  'WebSocket',
  'Window',
]

[build-dependencies]
vergen = "3"
