[package]
name = "pont-common"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.59", features = ["derive"] }
serde_derive = "^1.0.59"
rand = "*"
