[package]
name = "pont-server"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures = "0.3.4"
futures-util = "*"
futures-channel = "*"
pont-common = { path = "../pont-common" }
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "*"
rand = "^0.7"
