[package]
name = "pont-server"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
futures = "0.3.4"
pont-common = { path = "../pont-common" }
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "*"
rand = "^0.7"
env_logger = "0.7.1"
log = "*"
lazy_static = "*"

[dependencies.tokio]
version = "*"
features = ["macros", "net", "rt-threaded"]
