[package]
name = "pont-server"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies]
async-tungstenite = "*"
futures = "0.3.4"
pont-common = { path = "../pont-common" }
bincode = "*"
rand = "^0.7"
env_logger = "0.7.1"
num_cpus = "1.13.0"
log = "*"
lazy_static = "*"
smol = "*"

[dependencies.tungstenite]
version = "*"
default-features = false
